--- a/4.Python_Function.ipynb
+++ b/4.Python_Function.ipynb
@@ -1028,11 +1028,11 @@
     "\n",
     "* Python에 이미 내장되어 있는 built-in function들을 활용할 수 있음\n",
     "\n",
-    "* https://docs.python.org/2/library/functions.html\n",
+    "* https://docs.python.org/3/library/functions.html\n",
     "\n",
-    "* range(), str(), raw_input(), len(), …\n",
+    "* ```range()```, ```str()```, ```raw()```, ```len()```, …\n",
     "\n",
-    "* max(), min(), abs(), type(), …\n"
+    "* ```max()```, ```min()```, ```abs()```, ```type()```, …\n"
    ]
   },
   {
@@ -1130,10 +1130,10 @@
     "* 예\n",
     "  * math 모듈\n",
     "   * 기본적인 수학 연산을 도와주는 모듈\n",
-    "   * https://docs.python.org/2/library/math.html\n",
+    "   * https://docs.python.org/3/library/math.html\n",
     "  * random 모듈\n",
     "   * 다양한 분포에 대한 random number를 활용할 수 있게 해주는 모듈\n",
-    "   * https://docs.python.org/2/library/random.html\n",
+    "   * https://docs.python.org/3/library/random.html\n",
     "\n",
     "* import 명령을 사용하여 모듈을 불러와 사용\n",
     "\n",
@@ -1280,12 +1280,12 @@
     "\n",
     "* 다음은 Python 3.x에서는 해당되지 않는 내용이다.\n",
     "\n",
-    "* Python 2.x에서는 나누기(/)를 사용시 기본적으로 정수를 먼저 반환하려고 함.\n",
-    "  * 5/2 = 2\n",
+    "* Python 2.x에서는 나누기(```/```)를 사용시 기본적으로 정수를 먼저 반환하려고 함.\n",
+    "  * ```5/2 = 2```\n",
     "* 실수 나누기를 하고 싶은 경우\n",
-    "  * 5/2.0 혹은 5/float(2)\n",
+    "  * ```5/2.0``` 혹은 ```5/float(2)```\n",
     "\n",
-    "* 만약 default로 실수를 반환하는 나누기(/)를 사용하고 싶을 때, 다음 import문을 사용할 수 있음 "
+    "* 만약 default로 실수를 반환하는 나누기(```/```)를 사용하고 싶을 때, 다음 ```import```문을 사용할 수 있음 "
    ]
   },
   {
@@ -1448,7 +1448,7 @@
     "    while(True):\n",
     "        x = input(\"Guess the number between 1 to 100 (type q to quit) : \")\n",
     "        \n",
-    "        if a == \"q\":\n",
+    "        if x == \"q\":\n",
     "            return\n",
     "        elif a == int(x):\n",
     "            print(\"Correct!\")\n",
@@ -1608,9 +1608,11 @@
     "### 모듈에 대한 여러 가지\n",
     "\n",
     "* 파이썬 스크립트 파일로 모듈을 만들 수 있음\n",
-    "  * 기본 작업 directory에 저장하여 import 할 수 있음\n",
+    "  * 기본 작업 directory에 저장하여 import 할 수 있음  \n",
+    "  * ```import(fibo)```\n",
     "* 모듈 변경과 갱신\n",
-    "  * 혹시 모듈을 변경하였다면 reload 명령을 이용하여 갱신\n",
+    "  * 혹시 모듈을 변경하였다면 ```reload``` 명령을 이용하여 갱신\n",
+    "   * ```from imp import reload```\n",
     "   * ```reload(fibo)```"
    ]
   }
