--- a/5.Python_List_Dictionary.ipynb
+++ b/5.Python_List_Dictionary.ipynb
@@ -1986,7 +1986,7 @@
     {
      "data": {
       "text/plain": [
-       "<generator object even_numbers at 0x000002AA837FF830>"
+       "<generator object even_numbers at 0x000001AA421AF888>"
       ]
      },
      "execution_count": 92,
@@ -2080,7 +2080,7 @@
     {
      "data": {
       "text/plain": [
-       "<enumerate at 0x2aa837c24c8>"
+       "<enumerate at 0x1aa4219efc0>"
       ]
      },
      "execution_count": 96,
@@ -2148,7 +2148,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<zip object at 0x000002AA838AB6C8>\n"
+      "<zip object at 0x000001AA4225F6C8>\n"
      ]
     }
    ],
@@ -2352,7 +2352,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.7499954869354202, 0.915027062152807, 0.8955267169424488, 0.39902374361634696]\n"
+      "[0.47956362107488626, 0.901273634876332, 0.5687031310845672, 0.6926885149928287]\n"
      ]
     }
    ],
@@ -2378,7 +2378,7 @@
     {
      "data": {
       "text/plain": [
-       "[43, 39, 29, 31, 56, 50]"
+       "[48, 12, 26, 22, 5, 18]"
       ]
      },
      "execution_count": 107,
@@ -2396,7 +2396,7 @@
    "metadata": {},
    "source": [
     "랜덤 선택 (중복 허용)\n",
-    "* 0이상 10미만의 수를 중복하용하여 4번 추출\n",
+    "* 0이상 10미만의 수를 중복 허용하여 4번 추출\n",
     "* ```random.choice()```는 주어진 값들 중 임의의 하나의 값을 선택"
    ]
   },
@@ -2409,7 +2409,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[8, 9, 4, 0]\n"
+      "[7, 9, 3, 1]\n"
      ]
     }
    ],
@@ -2947,6 +2947,115 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Dictionary의 내용을 변경하면, ```tweet_keys```, ```tweet_values```, ```tweet_items```의 내용이 변경되는 것을 볼 수 있다.\n",
+    "\n",
+    "```.keys()```, ```.values()```, ```.items()```의 method들은 view라는 것을 반환하며, 이들은 dictionary의 상태 변경을 반영한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tweet[\"date\"] = \"2015-01-02\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['user', 'text', 'retweet_cout', 'hashtags', 'date'])"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tweet_keys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values(['joelgrus', 'Data Science is Awesome', 100, ['#data', '#science'], '2015-01-02'])"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tweet_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([('user', 'joelgrus'), ('text', 'Data Science is Awesome'), ('retweet_cout', 100), ('hashtags', ['#data', '#science']), ('date', '2015-01-02')])"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tweet_items"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "loop를 돌면서 dictionary의 내용을 제거할 수는 없다.\n",
+    "\n",
+    "* runtime error가 발생한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "dictionary changed size during iteration",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-135-ea152ffbef83>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mkey\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtweet\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mkey\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"date\"\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;32mdel\u001b[0m \u001b[0mtweet\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: dictionary changed size during iteration"
+     ]
+    }
+   ],
+   "source": [
+    "for key in tweet:\n",
+    "    if key == \"date\": del tweet[key]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Counter\n",
     "\n",
     "* sequence를 dictionary와 비슷한 형태로 바꾸어 줌"
@@ -2954,7 +3063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -2981,7 +3090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
