--- a/4.Python_Function.ipynb
+++ b/4.Python_Function.ipynb
@@ -396,13 +396,13 @@
    "outputs": [
     {
      "ename": "TypeError",
-     "evalue": "printme() missing 1 required positional argument: 'str'",
+     "evalue": "printme() missing 1 required positional argument: 'stri'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-15-93e492e75154>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;32mreturn\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mprintme\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: printme() missing 1 required positional argument: 'str'"
+      "\u001b[1;32m<ipython-input-15-46fdeebb8fc1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;32mreturn\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mprintme\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: printme() missing 1 required positional argument: 'stri'"
      ]
     }
    ],
@@ -776,8 +776,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "def increase(x):\n",
     "    x = x + 1\n",
@@ -801,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -905,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +968,7 @@
        "(None, None)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -992,17 +1002,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the number of heads : 50\n",
-      "Enther the number of legs : 160\n",
-      "Number of pigs :  30\n",
-      "Number of chickens :  20\n"
+      "Enter the number of heads : 16\n",
+      "Enther the number of legs : 52\n",
+      "Number of pigs :  10\n",
+      "Number of chickens :  6\n"
      ]
     }
    ],
@@ -1047,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1092,7 @@
        "4"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1101,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1110,7 +1120,7 @@
        "4"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1152,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1161,7 +1171,7 @@
        "8.426149773176359"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1173,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1182,7 +1192,7 @@
        "1.0"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1193,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1202,7 +1212,7 @@
        "2.0"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1213,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1222,7 +1232,7 @@
        "0.0"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1233,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1242,7 +1252,7 @@
        "3.0"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1253,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1272,7 @@
        "0.6931471805599452"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1282,51 +1292,91 @@
     "\n",
     "* Python 2.x에서는 나누기(```/```)를 사용시 기본적으로 정수를 먼저 반환하려고 함.\n",
     "  * ```5/2 = 2```\n",
-    "* 실수 나누기를 하고 싶은 경우\n",
+    "* Python 2.x에서 실수 나누기를 하고 싶은 경우\n",
     "  * ```5/2.0``` 혹은 ```5/float(2)```\n",
     "\n",
-    "* 만약 default로 실수를 반환하는 나누기(```/```)를 사용하고 싶을 때, 다음 ```import```문을 사용할 수 있음 "
+    "* 만약 Python 2.x에서 default로 실수를 반환하는 나누기(```/```)를 사용하고 싶을 때, 다음 ```import```문을 사용할 수 있음  \n",
+    "  * ```from __future__ import division```  \n",
+    "  \n",
+    "* 이 노트북은 Python 3를 기반으로 작성되었지만, Jupyter cell magic 중의 하나인 ```%%python2```를 이용하면 Python 2를 시험해 볼 수 있다.\n",
+    "  * Python 2가 설치되어 있지 않은 컴퓨터에서는 작동하지 않는다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2.5"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\r\n"
+     ]
     }
    ],
    "source": [
+    "%%python2\n",
+    "\n",
+    "print(5/2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.5\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%python2\n",
+    "\n",
+    "print(5/2.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.5\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%python2\n",
+    "\n",
     "from __future__ import division\n",
-    "5/2"
+    "print(5/2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\r\n"
+     ]
     }
    ],
    "source": [
-    "5//2"
+    "%%python2\n",
+    "\n",
+    "print(5//2)"
    ]
   },
   {
@@ -1348,16 +1398,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.10668914840319754"
+       "0.14032553038231654"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1369,16 +1419,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6.341924961487889"
+       "3.03556263345829"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1389,16 +1439,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "2"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1409,16 +1459,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6654604009008476"
+       "0.4067949610403132"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1438,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1463,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1474,10 +1524,14 @@
       "The number is smaller than your guess, try again.\n",
       "Guess the number between 1 to 100 (type q to quit) : 25\n",
       "The number is larger than your guess, try again.\n",
-      "Guess the number between 1 to 100 (type q to quit) : 32\n",
-      "The number is larger than your guess, try again.\n",
-      "Guess the number between 1 to 100 (type q to quit) : 41\n",
+      "Guess the number between 1 to 100 (type q to quit) : 37\n",
       "The number is smaller than your guess, try again.\n",
+      "Guess the number between 1 to 100 (type q to quit) : 31\n",
+      "The number is larger than your guess, try again.\n",
+      "Guess the number between 1 to 100 (type q to quit) : 34\n",
+      "The number is larger than your guess, try again.\n",
+      "Guess the number between 1 to 100 (type q to quit) : 35\n",
+      "The number is larger than your guess, try again.\n",
       "Guess the number between 1 to 100 (type q to quit) : 36\n",
       "Correct!\n"
      ]
@@ -1498,7 +1552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1513,16 +1567,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.4360479212496367"
+       "0.7848164054497683"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1540,16 +1594,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10"
+       "3"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1561,16 +1615,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7"
+       "3"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1582,16 +1636,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "9"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1633,7 +1687,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
