--- a/6.Linear_algebra.ipynb
+++ b/6.Linear_algebra.ipynb
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
        "array([0, 1, 2, 3])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1106,6 +1106,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Python의 기본 random 모듈에서도 비슷한 기능을 수행하나, numpy.random 모듈을 이용하는 것이 속도가 빠르다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "N = 1000000"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```%timeit```은 jupyter line magic 중의 하나로 실행시간을 측정할 수 있다.   \n",
+    "아래 두 실험의 결과를 비교하면 numpy.random모듈을 이용하는 것이 훨씬 빠름을 알 수 있다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "146 ms ± 674 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit sample1 = [random.random() for _ in range(N)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11.7 ms ± 68.5 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit sample2 = np.random.rand(N)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "위 예제들에서 경우에 따라 마침표 (예 : 2. vs 2)가 표시된다는 것을 알 수 있다. 이는 데이터 유형의 차이 때문이다. 마침표가 없는 것은 정수형 데이터, 마침표가 있는 것은 실수형 데이터를 의미한다. numpy array는 한 종류의 데이터 유형만 가질 수 있다."
    ]
   },
@@ -1437,8 +1496,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src = \"figure/numpy_indexing.png\", width = 500, height = 500>\n",
-    "https://scipy-lectures.org/intro/numpy/array_object.html#what-are-numpy-and-numpy-arrays"
+    "<img src = \"figure/numpy_indexing.png\" width = 400 height = 400>\n",
+    "<a href=https://scipy-lectures.org/intro/numpy/array_object.html#what-are-numpy-and-numpy-arrays>\n",
+    "    https://scipy-lectures.org/intro/numpy/array_object.html#what-are-numpy-and-numpy-arrays </a>"
    ]
   },
   {
@@ -1570,16 +1630,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src = \"figure/numpy_fancy_indexing.png\", width = 600, height = 600>"
+    "#### Advanced Indexing\n",
+    "\n",
+    "```:```를 이용하는 slicing이 아닌 정수 혹은 Boolean의 list, array, tuple 등으로 이루어진 indexing을 말한다."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Advanced Indexing\n",
-    "\n",
-    "```:```를 이용하는 slicing이 아닌 정수 혹은 Boolean의 list, array, tuple 등으로 이루어진 indexing을 말한다."
+    "<img src = \"figure/numpy_fancy_indexing.png\" width = 600 height = 600>"
    ]
   },
   {
@@ -2647,7 +2707,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
