--- a/10.Probability.ipynb
+++ b/10.Probability.ipynb
@@ -27,7 +27,7 @@
     "* 만약 사건 $E$와 $F$가 독립이 아닐 수 있으면, 다음과 같이 조건부 확률을 정의\n",
     "\n",
     "$$\n",
-    "P(E|F)P(E|F) = \\frac{P(E,F)}{P(F)}\n",
+    "P(E|F) = \\frac{P(E,F)}{P(F)}\n",
     "$$\n",
     "\n",
     "* 사건 $F$가 발생하였을 때, $E$가 발생할 확률\n",
@@ -717,7 +717,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
