--- a/8.File_IO.ipynb
+++ b/8.File_IO.ipynb
@@ -206,6 +206,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```a_file.readlines()```는 list이기 때문에 파일의 크기가 크면 메모리 문제가 생길 수 있다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a,b,c,d,message\\n', '1,2,3,4,hello\\n', '5,6,7,8,world\\n', '9,10,11,12,foo']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a_file = open(file = 'ex1.csv', mode = 'r')\n",
+    "a_file.readlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a_file.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "따라서 일반적으로는 lazy loading인 다음의 방법을 사용한다.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "```.read()``` method를 이용해 모든 라인을 한 번에 읽을 수 있다."
    ]
   },
