--- a/8.File_IO.ipynb
+++ b/8.File_IO.ipynb
@@ -369,7 +369,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1caa1bf17c8>"
+       "<matplotlib.image.AxesImage at 0x1c7cef60748>"
       ]
      },
      "execution_count": 16,
@@ -591,7 +591,63 @@
     }
    ],
    "source": [
-    "add_nums(\"my_test.txt\")"
+    "result = add_nums(\"my_test.txt\")\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "다른 파일에 행 번호가 붙은 내용을 저장해 보자."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"my_test2.txt\", \"w\") as fin:\n",
+    "    for line in result:\n",
+    "        fin.write(line)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 예제 : 등장한 단어의 개수 세기\n",
+    "\n",
+    "* ```.split()``` method를 이용하여, 각 단어를 공백 기준으로 나누어 list에 저장할 수 있다.\n",
+    "* ```.strip(',.')```는 단어의 마지막에 등장하는 쉼표나 마침표를 제거한다.\n",
+    "* 대소문자 구분없이 단어를 세려면 어떻게 해야 할까?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({'the': 14, 'of': 13, 'was': 11, 'it': 9, 'we': 4, 'times': 2, 'age': 2, 'epoch': 2, 'season': 2, 'had': 2, 'before': 2, 'us': 2, 'were': 2, 'all': 2, 'going': 2, 'direct': 2, 'in': 2, 'period': 2, 'its': 2, 'for': 2, 'It': 1, 'best': 1, 'worst': 1, 'wisdom': 1, 'foolishness': 1, 'belief': 1, 'incredulity': 1, 'Light': 1, 'Darkness': 1, 'spring': 1, 'hope': 1, 'winter': 1, 'despair': 1, 'everything': 1, 'nothing': 1, 'to': 1, 'Heaven': 1, 'other': 1, 'way': 1, '-': 1, 'short': 1, 'so': 1, 'far': 1, 'like': 1, 'present': 1, 'that': 1, 'some': 1, 'noisiest': 1, 'authorities': 1, 'insisted': 1, 'on': 1, 'being': 1, 'received': 1, 'good': 1, 'or': 1, 'evil': 1, 'superlative': 1, 'degree': 1, 'comparison': 1, 'only': 1, 'Tale': 1, 'Two': 1, 'Cities': 1, 'by': 1, 'Charles': 1, 'Dickens': 1})\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"my_test.txt\") as fin:\n",
+    "    result = []\n",
+    "    for line in fin:\n",
+    "        words = line.split()\n",
+    "        for word in words:\n",
+    "            result.append(word.strip('.,'))\n",
+    "\n",
+    "from collections import Counter\n",
+    "c = Counter(result)\n",
+    "print(c)"
    ]
   },
   {
@@ -625,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +757,7 @@
        "2  9  10  11  12     foo"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +843,7 @@
        "2  9  10  11  12    foo"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +872,7 @@
        "{'name': ['Tom', 'Lia', 'Anne', 'Bill'], 'score': [50, 60, 40, 70]}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +945,7 @@
        "3  Bill     70"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -910,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +1013,7 @@
        "  {'name': 'Katie', 'age': 38, 'pets': ['Sixes', 'Stache', 'Cisco']}]}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -968,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -977,7 +1033,7 @@
        "dict"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
