--- a/10.Descriptive_Statistics.ipynb
+++ b/10.Descriptive_Statistics.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 8. Statistics"
+    "# 10.Descriptive_Statistics"
    ]
   },
   {
