--- a/9.File_IO.ipynb
+++ b/9.File_IO.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python에서의 파일 입출력"
+    "# 9. Python에서의 파일 입출력"
    ]
   },
   {
