--- a/7.Linear_algebra.ipynb
+++ b/7.Linear_algebra.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6. Linear  algebra"
+    "# 7. Linear  algebra"
    ]
   },
   {
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1904,7 +1904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1914,7 +1914,7 @@
        "       6.5, 7. , 7.5, 8. , 8.5, 9. , 9.5])"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1926,7 +1926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1935,13 +1935,106 @@
        "array([5.5, 6. , 6.5, 7. ])"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "x[(5 < x) * (x < 7.5)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "물론 indexing은 대입 연산과 같이 사용할 수 있다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.   0.5  1.   1.5  2.   2.5  3.   3.5  4.   4.5  5.  -1.  -1.  -1.\n",
+      " -1.   7.5  8.   8.5  9.   9.5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x[(5 < x) * (x < 7.5)] = -1\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```np.all```은 array나 list의 모든 값이 ```True```인지를 체크한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.all([True, True, True])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.all([True, True, True, False])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.all(np.arange(0.5, 10, 0.5) > 0)"
    ]
   },
   {
