--- a/2.Python_Basic.ipynb
+++ b/2.Python_Basic.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "번외 : 만약 Spyder를 이용 중이라면, Spyder 오른쪽 하단의 IPython Console을 이용하여 위의 문장을 실행시켜 보자.\n",
     "Spyder는 Anaconda 배포판을 통해 설치할 수 있는 Python 개발 환경이다.\n",
-    "아래 그림의 In [1]: 오른쪽 부분에 print 'This is my first Python program.' 를 입력하고 엔터를 입력한다.\n",
+    "아래 그림의 In [1]: 오른쪽 부분에 ```print('This is my first Python program.')``` 를 입력하고 엔터를 입력한다.\n",
     "\n",
     "<img src=\"./figure/console.png\" width=\"500\">"
    ]
@@ -65,14 +65,14 @@
     "\n",
     "Python에는 크게 세 가지 데이터 타입이 존재\n",
     "* 숫자형\n",
-    "  * 5, 10.3, -2, -1.02\n",
+    "  * ```5```, ```10.3```, ```-2```, ```-1.02```\n",
     "  * 사칙연산 등을 수행할 수 있음\n",
     "  * 숫자형 데이터는 다시 정수형과 실수형으로 구분할 수 있다.\n",
     "* 문자열\n",
-    "  * \"apple\", \"Hello, world!\", 'Yeungnam University', \"15\"\n",
+    "  * ```\"apple\"```, ```\"Hello, world!\"```, ```'Yeungnam University'```, ```\"15\"```\n",
     "  * 큰 따옴표나 작은 따옴표로 표현\n",
     "* 부울(Bool)\n",
-    "  * True, False\n"
+    "  * ```True```, ```False```\n"
    ]
   },
   {
@@ -281,6 +281,46 @@
    ],
    "source": [
     "2 ** 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.4142135623730951"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2 ** (1/2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10 ** (-1)"
    ]
   },
   {
@@ -672,7 +712,7 @@
     }
    ],
    "source": [
-    "print(\"Hello, w!\")"
+    "print(\"Hello, world!\")"
    ]
   },
   {
@@ -858,7 +898,7 @@
     "아래 예제는 간단해 보이지만, 처음 겪는 사람은 다소 헷갈리 수 있다.\n",
     "\n",
     "아래의 명령을 실행하면, 키보드 입력을 기다리는 화면이 나타난다.\n",
-    "* 자유롭게 타이핑을 하여 결과를 확인해 보자."
+    "* 자유롭게 타이핑을 한 후 엔터를 치고 결과를 확인해 보자."
    ]
   },
   {
