--- a/2.Python_Basic.ipynb
+++ b/2.Python_Basic.ipynb
@@ -52,7 +52,7 @@
     "Spyder는 Anaconda 배포판을 통해 설치할 수 있는 Python 개발 환경이다.\n",
     "아래 그림의 In [1]: 오른쪽 부분에 ```print('This is my first Python program.')``` 를 입력하고 엔터를 입력한다.\n",
     "\n",
-    "<img src=\"figure/console.png\" width=\"500\">"
+    "<img src=\"https://github.com/ksublee/SPuP/blob/master/figure/console.png?raw=true\" width=\"500\">"
    ]
   },
   {
@@ -476,7 +476,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"figure/variable.png\" width=\"600\">"
+    "<img src=\"https://github.com/ksublee/SPuP/blob/master/figure/variable.png?raw=true\" width=\"600\">"
    ]
   },
   {
@@ -521,7 +521,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"figure/variable_obejct.png\" width=\"400\">"
+    "<img src=\"https://github.com/ksublee/SPuP/blob/master/figure/variable_obejct.png?raw=true\" width=\"400\">"
    ]
   },
   {
@@ -938,7 +938,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"figure/input.png\" width=\"450\">"
+    "<img src=\"https://github.com/ksublee/SPuP/blob/master/figure/input.png?raw=true\" width=\"450\">"
    ]
   },
   {
@@ -2636,7 +2636,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"figure/print.png\" width=\"450\">"
+    "<img src=\"https://github.com/ksublee/SPuP/blob/master/figure/print.png?raw=true\" width=\"450\">"
    ]
   },
   {
