--- a/4.Python_Loop.ipynb
+++ b/4.Python_Loop.ipynb
@@ -211,7 +211,7 @@
    "source": [
     "* ```while```문 검사에 사용하는 변수 ```j```는 ```while```문 바깥에서 미리 초기화\n",
     "* ```while```문 내에서 ```j```의 값을 변화시키면서 무한 루프를 방지\n",
-    "* 반복문에 어떻게 작동하는지 이해가 힘들 경우 위 예제처럼 핵심 변수를 ```print```하여 반복문의 원리를 파악한다."
+    "* 반복문이 어떻게 작동하는지 이해가 힘들 경우 위 예제처럼 핵심 변수를 ```print```하여 반복문의 원리를 파악한다."
    ]
   },
   {
@@ -265,6 +265,21 @@
     "    ans = ans + x\n",
     "    i = i + 1\n",
     "print(str(x) + ' * ' + str(x) + ' = ' + str(ans))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 반복문의 일반적 형태\n",
+    "\n",
+    "반복문을 설계하여야 할 때 다음 사항들을 생각해 보자.\n",
+    "* counter로 사용할 변수 설정\n",
+    "* counter 변수를 반복문 바깥에서 초기화\n",
+    "* 반복문이 언제 끝나야 하는지 결정하는 end-test 설정\n",
+    "* 반복문 내에서 실행할 코드를 작성\n",
+    "  * counter를 변화시키는 작업 포함\n",
+    "* 반복문이 종료되었을 때 이를 이용해 무엇을 할지 결정"
    ]
   },
   {
@@ -441,21 +456,6 @@
     "        break\n",
     "else:\n",
     "    print(\"x is not a power of 2\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 반복문의 일반적 형태\n",
-    "\n",
-    "반복문을 설계하여야 할 때 다음 사항들을 생각해 보자.\n",
-    "* counter로 사용할 변수 설정\n",
-    "* counter 변수를 반복문 바깥에서 초기화\n",
-    "* 반복문이 언제 끝나야 하는지 결정하는 end-test 설정\n",
-    "* 반복문 내에서 실행할 코드를 작성\n",
-    "  * counter를 변화시키는 작업 포함\n",
-    "* 반복문이 종료되었을 때 이를 이용해 무엇을 할지 결정"
    ]
   },
   {
