--- a/5.Python_Function.ipynb
+++ b/5.Python_Function.ipynb
@@ -1002,17 +1002,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the number of heads : 16\n",
-      "Enther the number of legs : 52\n",
+      "Enter the number of heads : 20\n",
+      "Enther the number of legs : 60\n",
       "Number of pigs :  10\n",
-      "Number of chickens :  6\n"
+      "Number of chickens :  10\n"
      ]
     }
    ],
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1083,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1092,7 @@
        "4"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1120,7 +1120,7 @@
        "4"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1162,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1171,7 +1171,7 @@
        "8.426149773176359"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1192,7 @@
        "1.0"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1212,7 +1212,7 @@
        "2.0"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1232,7 +1232,7 @@
        "0.0"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1252,7 +1252,7 @@
        "3.0"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1263,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1272,7 +1272,7 @@
        "0.6931471805599452"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1304,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1323,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1362,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1398,16 +1398,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.14032553038231654"
+       "0.3978660384420083"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1419,16 +1419,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3.03556263345829"
+       "2.435942373145139"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1439,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1448,7 +1448,7 @@
        "2"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1459,16 +1459,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.4067949610403132"
+       "-2.367730073306836"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1488,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1513,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1521,18 +1521,12 @@
      "output_type": "stream",
      "text": [
       "Guess the number between 1 to 100 (type q to quit) : 50\n",
+      "The number is larger than your guess, try again.\n",
+      "Guess the number between 1 to 100 (type q to quit) : 75\n",
+      "The number is larger than your guess, try again.\n",
+      "Guess the number between 1 to 100 (type q to quit) : 87\n",
       "The number is smaller than your guess, try again.\n",
-      "Guess the number between 1 to 100 (type q to quit) : 25\n",
-      "The number is larger than your guess, try again.\n",
-      "Guess the number between 1 to 100 (type q to quit) : 37\n",
-      "The number is smaller than your guess, try again.\n",
-      "Guess the number between 1 to 100 (type q to quit) : 31\n",
-      "The number is larger than your guess, try again.\n",
-      "Guess the number between 1 to 100 (type q to quit) : 34\n",
-      "The number is larger than your guess, try again.\n",
-      "Guess the number between 1 to 100 (type q to quit) : 35\n",
-      "The number is larger than your guess, try again.\n",
-      "Guess the number between 1 to 100 (type q to quit) : 36\n",
+      "Guess the number between 1 to 100 (type q to quit) : 81\n",
       "Correct!\n"
      ]
     }
@@ -1552,7 +1546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1567,16 +1561,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7848164054497683"
+       "-0.27598459592918556"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1594,16 +1588,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "4"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1615,16 +1609,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "5"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1636,16 +1630,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9"
+       "1"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1663,11 +1657,29 @@
     "\n",
     "* 파이썬 스크립트 파일로 모듈을 만들 수 있음\n",
     "  * 기본 작업 directory에 저장하여 import 할 수 있음  \n",
-    "  * ```import(fibo)```\n",
+    "  * ```import fibo```\n",
     "* 모듈 변경과 갱신\n",
     "  * 혹시 모듈을 변경하였다면 ```reload``` 명령을 이용하여 갱신\n",
     "   * ```from imp import reload```\n",
     "   * ```reload(fibo)```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1, 1, 2, 3, 5, 8, 13, 21, 34, "
+     ]
+    }
+   ],
+   "source": [
+    "import fibo\n",
+    "fibo.fib(50)"
    ]
   }
  ],
